# backend/app/app/service/cmd/server/assets/openapi.yaml
@@ -1874,14 +1874,10 @@ components:
                         - EDITOR_TYPE_UNSPECIFIED
                         - EDITOR_TYPE_MARKDOWN
                         - EDITOR_TYPE_RICH_TEXT
-                        - EDITOR_TYPE_HTML
-                        - EDITOR_TYPE_JSON_BLOCK
                         - EDITOR_TYPE_PLAIN_TEXT
                         - EDITOR_TYPE_CODE
-                        - EDITOR_TYPE_WYSIWYG
+                        - EDITOR_TYPE_JSON_BLOCK
                         - EDITOR_TYPE_VISUAL_BUILDER
-                        - EDITOR_TYPE_SLATE
-                        - EDITOR_TYPE_PROSEMIRROR
                     type: string
                     description: 编辑器类型
                     format: enum
@@ -2073,14 +2069,10 @@ components:
                         - EDITOR_TYPE_UNSPECIFIED
                         - EDITOR_TYPE_MARKDOWN
                         - EDITOR_TYPE_RICH_TEXT
-                        - EDITOR_TYPE_HTML
-                        - EDITOR_TYPE_JSON_BLOCK
                         - EDITOR_TYPE_PLAIN_TEXT
                         - EDITOR_TYPE_CODE
-                        - EDITOR_TYPE_WYSIWYG
+                        - EDITOR_TYPE_JSON_BLOCK
                         - EDITOR_TYPE_VISUAL_BUILDER
-                        - EDITOR_TYPE_SLATE
-                        - EDITOR_TYPE_PROSEMIRROR
                     type: string
                     description: 编辑器类型
                     format: enum
